styles.css
/* MD's background */
/* :root {
    --background: #49745e;
    --buttonbackground: linear-gradient(
            102.7deg,
            rgb(253, 218, 255) 8.2%,
            rgb(223, 173, 252) 19.6%,
            rgb(173, 205, 252) 36.8%,
            rgb(173, 252, 244) 73.2%,
            rgb(202, 248, 208) 90.9%
    );
    --buttonhover: rgba(170, 170, 170, 0.26);
}

body {
    height: 100%;
    width: 100%;
    overflow: hidden;
    user-select: none;
}
.bg{
    background-color: #49745E;
    opacity: 0.8;
    background-image: radial-gradient(#E5E5F7 1.1px, #49745E 1.1px);
    background-size: 20px 20px, 20px 20px, 10px 10px, 10px 10px;
    animation-name: bg-animate;
    animation-duration: 3s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
    animation-play-state: running;
    height: 1000vh;
    width: 1000vw;
    background-repeat: repeat;
    z-index: -1000;
    position: fixed;
} */
:root {
    background-color: #245324;
    min-height: 100vh;
    background-image: url("Images/classy-fabric.png");
    --buttonbackground: linear-gradient(
            102.7deg,
            rgb(253, 218, 255) 8.2%,
            rgb(223, 173, 252) 19.6%,
            rgb(173, 205, 252) 36.8%,
            rgb(173, 252, 244) 73.2%,
            rgb(202, 248, 208) 90.9%
    );
    --buttonhover: rgba(170, 170, 170, 0.26);
}


body {

    height: 100%;
    width: 100%;
    overflow: hidden;
    user-select: none;
}

@font-face {
    font-family: myFirstFont;
    src: url('Font.ttf');
}

.home-pictures {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    height: 50vh; /* Adjust height as needed */
    width: 45%; /* Occupy 45% of the viewport width */
    padding: 20px; /* Add some padding for spacing */
    scale: 50%;
}

.home-pictures.left {
    /*left: 0; !* Position the container on the left side *!*/
    transform: rotate(-10deg)
}

.home-pictures.right {
    /*right: 0; !* Position the container on the right side *!*/
    transform: rotate(10deg)
}

.home-ui{
    display: flex;
    flex-direction: column;
    flex-direction: column;
    /* gap: 250px; */
    height: 100%;
    width: 100%;
    justify-content: space-around;
    align-items: center;
}
#title-of-game {
    margin: 10px;
    padding-top: 20px;
    font-size: 150px;
    /*border-bottom: 5px solid black;*/
    text-decoration: solid;
    text-align: center;
    font-family: myFirstFont;
    src: url("Poker.ttf");
    color: black;
    text-shadow: 2px 0 #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff, 1px 1px #fff, -1px -1px #fff, 1px -1px #fff, -1px 1px #fff;
}

.home-screen-buttons {
    display: flex;
    flex-direction: column;
    justify-content: center;
    position: relative;
    align-items: center;
}

html{
    height:100%
}
.home-screen-buttons button {
    display:block;
    font-family: 'myFirstFont';
    font-size: 5em;
    color:black;
    font-weight:800;
    text-decoration:none;
    background: none;
    transition:0.4s;
    border: none;
    text-transform: uppercase;
    max-width: fit-content;
    cursor: pointer;
    text-shadow: 2px 0 #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff,
    1px 1px #fff, -1px -1px #fff, 1px -1px #fff, -1px 1px #fff;
}

.home-screen-buttons button:hover{
    color: #333;
}




/* Home screen button select, ANIMATED BUTTON + ANIMATED ICON */
.home-screen-buttons img {
    visibility: hidden;
    width: 40px;
    transform: rotate(-0.25turn);
    width: 40px;
    display:inline-flex;
    align-items: center;
    position: relative;
    border: solid black;
    background-color: white;
    border-radius: 10%;
}
.home-screen-buttons button:hover img{
    visibility: visible;
    animation-name: slideleft;
    animation-duration: 1.1s;
    animation-iteration-count: infinite;
}

@keyframes slideleft {

    0%{
        transform: translateX(20px) rotate(-0.25turn);
        /*margin-left: 15px;*/
    }

    50%{
        transform: translateX(5px) rotate(-0.25turn);
        /*margin-left: 0px;*/
    }
    100%{
        transform: translateX(20px) rotate(-0.25turn);
        /*margin-left: 0px;*/
    }

}




/* Home screen button select, NO ANIMATED BUTTON + ANIMATED ICON */

/* .home-screen-buttons img {
    visibility: hidden;
    width: 40px;
    
}
.home-screen-buttons button:hover img{
    visibility: visible;
    transform: rotate(-0.25turn);
    width: 40px;
    display:inline-flex;
    align-items: center;
    position: relative;
    animation-name: slideleft;
    animation-duration: 1.1s;
    /* border: solid black;
    background-color: white;   
}

@keyframes slideleft {

    0%{
        transform: translate(50px,0px)rotate(-0.25turn);
    }

    100%{
        transform: translate(0px,0px)rotate(-0.25turn);
    }


} */

@keyframes bg-animate {
    0%{
        transform: translate(-100px,-100px);
    }

    100%{
        transform: translate(-200px,-200px);
    }
}

@keyframes logo-animation{
    0%, 24.99%, 100%{
        background-image: url("images/clubs.svg");

    }
    25%, 49.99%{
        background-image: url("images/spades.svg");

    }
    50%, 74.99%{
        background-image: url("images/diamonds.svg");

    }
    75%, 99.99%{
        background-image: url("images/hearts.svg");

    }
}
.header{
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    height: 205px;
}

.logo{
    animation-name: logo-animation;
    animation-duration: 1s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
    animation-play-state: running;
    height: 50px;
    min-width: 50px;
    background-repeat: no-repeat;
    background-size: contain;
    position: relative;
    right: 11.4%;
    top: 3%;
}

